--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "siii-chest",
   "version": "0.1.0",
   "description": "SIII market server",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Adrien-H/siii-chest#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.3.13"
   }
 }
